# python-basic

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.deployment/: setup_and_deploy.sh
.deployment/terraform/: argocd.tf  main.tf  outputs.tf  provider.tf  variables.tf
.deployment/terraform/eks/: cluster.tf  main.tf  outputs.tf  variables.tf
.deployment/terraform/gke/: cluster.tf  main.tf  outputs.tf  variables.tf
.deployment/terraform/modules/docker_images/: aws.tf  gcp.tf  main.tf  outputs.tf  variables.tf
.deployment/terraform/modules/secret_storage/: main.tf  outputs.tf  variables.tf
.deployment/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
.deployment/terraform/shared/: deployments.tf  kubernetes.tf  secrets.tf
.deployment/terraform/tfvars/: deployments.tfvars
.devcontainer/: devcontainer.json
python-poetry-project/: Dockerfile  pyproject.toml
python-react-project/: Dockerfile  README.md
python-react-project/backend/: gunicorn_conf.py  pyproject.toml  start.sh
python-react-project/backend/app/: main.py  websocket_server.py
python-react-project/backend/templates/: index.html
python-react-project/frontend/: package.json
python-react-project/frontend/src/: App.tsx
python-react-project/frontend/src/components/: HelloWorld.tsx
python-react-project/frontend/src/utils/: timedPromise.ts
