[tool.poetry]
name = "python-basic"
version = "0.1.0"
description = "basic project for python development"
authors = ["Alon Fux"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
